--- a/pom.xml
+++ b/pom.xml
@@ -59,14 +59,18 @@
             <name>Prime Repo</name>
             <url>http://repository.primefaces.org</url>
         </repository>
+
+    <!-- Adicionado pelo Anderson 7/5/20 -->
         <repository>
 			<id>jvnet-nexus-releases</id>
 			<name>jvnet-nexus-releases</name>
 			<url>https://maven.java.net/content/repositories/releases/</url>
 		</repository>
     </repositories> 
+    <!-- FIM Adicionado pelo Anderson 7/5/20 -->
        
     <dependencies>
+    <!-- Adicionado pelo Anderson 7/5/20 -->
 		<!-- https://mvnrepository.com/artifact/javax.el/javax.el-api -->
 		<dependency>
 		    <groupId>javax.el</groupId>
@@ -81,12 +85,14 @@
 		    <version>2.1</version>
 		    <scope>provided</scope>
 		</dependency>
+		
 		<!-- https://mvnrepository.com/artifact/com.sun.faces/jsf-impl -->
 		<dependency>
 		    <groupId>com.sun.faces</groupId>
 		    <artifactId>jsf-impl</artifactId>
 		    <version>2.2.14</version>
 		</dependency>
+    <!-- FIM Adicionado pelo Anderson 7/5/20 -->
     
         <dependency>
             <groupId>junit</groupId>
