Migrado para Java8
O projeto precisou ser migrado para java, mas estou pensando se fiz uma boa coisa pois terei outro J2EE rodando uma vez que não pensar em mudar todo o QWCFP.....

--- a/src/test/resources/webexplorer.properties
+++ b/src/test/resources/webexplorer.properties
@@ -1,5 +1,5 @@
 # multiple paths separate by semicolon
-app.default.paths=G:\\Musicas
+app.default.paths=/home;/tmp;/dados
 
 # reference network share like so
 #app.default.paths=\\\\GOFLEX_HOME\\GoFlex Home Public
