--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,17 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app version="3.1" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd">
-    <listener>
-        <listener-class>
-            org.springframework.web.context.ContextLoaderListener
-        </listener-class>
-    </listener>
-    
+    <!-- Incluído pelo Anderson 24/05/2020 -->
+	    <context-param>
+	    	<param-name>contextConfigLocation</param-name>
+		    <param-value>
+		        /WEB-INF/classes/applicationContext.xml
+		    </param-value>
+		</context-param>
+    <!-- FIM Incluído pelo Anderson 24/05/2020 -->
+	<!-- 
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>
             classpath:applicationContext*.xml
         </param-value>
     </context-param>
+    -->
+    <listener>
+        <listener-class>
+            org.springframework.web.context.ContextLoaderListener
+        </listener-class>
+    </listener>
     <context-param>
         <param-name>com.sun.faces.defaultResourceMaxAge</param-name>
         <param-value>3600</param-value> <!-- cache expires 1 hrs -->  
