--- a/.classpath
+++ b/.classpath
@@ -24,6 +24,7 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="src" path="src/main/webapp"/>
 	<classpathentry kind="con" path="org.eclipse.m2e.MAVEN2_CLASSPATH_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
@@ -40,5 +41,7 @@
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="libs/primefaces-5.2.jar"/>
+	<classpathentry kind="lib" path="libs/primefaces-extensions-3.0.0.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
