--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>br.com.pix.qwcfp</groupId>
     <artifactId>QWCFPFileExplorer</artifactId>
-    <version>1.0.1.3</version>
+    <version>1.0.1.6</version>
     <packaging>war</packaging>
     <url>${application.url}</url>
 
@@ -43,7 +43,8 @@
         <contact.email>anderson</contact.email>
         <endorsed.dir>${project.build.directory}/endorsed</endorsed.dir>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <glassfish.javax.faces.version>2.1.29</glassfish.javax.faces.version>
+        <!--  <glassfish.javax.faces.version>2.1.29</glassfish.javax.faces.version> -->
+        <glassfish.javax.faces.version>2.4.0</glassfish.javax.faces.version>
         <primefaces.version>5.2</primefaces.version>
         <!--  <spring.version>4.1.6.RELEASE</spring.version> -->
         <spring.version>4.3.27.RELEASE</spring.version>
@@ -71,32 +72,23 @@
        
     <dependencies>
     	<!-- Adicionado pelo Anderson 7/5/20 -->
-		<!-- https://mvnrepository.com/artifact/javax.el/javax.el-api 
-			<dependency>
-			    <groupId>javax.el</groupId>
-			    <artifactId>javax.el-api</artifactId>
-			    <version>3.0.0</version>
-			</dependency>
-		-->
-		<!-- https://mvnrepository.com/artifact/javax.faces/jsf-api 
+		<!-- https://mvnrepository.com/artifact/javax.el/javax.el-api -->
 		<dependency>
-		    <groupId>javax.faces</groupId>
-		    <artifactId>jsf-api</artifactId>
-		    <scope>provided</scope>
+		    <groupId>javax.el</groupId>
+		    <artifactId>javax.el-api</artifactId>
 		</dependency>
-		https://mvnrepository.com/artifact/javax.faces/javax.faces-api -->
+
+		
+		<!-- https://mvnrepository.com/artifact/org.glassfish/javax.el -->
+		<dependency>
+		    <groupId>org.glassfish</groupId>
+		    <artifactId>javax.el</artifactId>
+		</dependency>
 		
 		<dependency>
 		    <groupId>javax.faces</groupId>
 		    <artifactId>javax.faces-api</artifactId>
-		    <version>2.3</version>
 		    <scope>provided</scope>
-		</dependency>
-		
-		<!-- https://mvnrepository.com/artifact/com.sun.faces/jsf-impl -->
-		<dependency>
-		    <groupId>com.sun.faces</groupId>
-		    <artifactId>jsf-impl</artifactId>
 		</dependency>
 
 		<dependency>
@@ -360,12 +352,12 @@
     		<dependency>
     			<groupId>javax.faces</groupId>
     			<artifactId>jsf-api</artifactId>
-    			<version>2.2.14</version>
+    			<version>2.2.20</version>
     		</dependency>
     		<dependency>
     			<groupId>com.sun.faces</groupId>
     			<artifactId>jsf-impl</artifactId>
-    			<version>2.2.14</version>
+    			<version>2.2.20</version>
     		</dependency>
     		<dependency>
     			<groupId>org.jboss.modules</groupId>
@@ -486,6 +478,22 @@
     			<groupId>commons-codec</groupId>
     			<artifactId>commons-codec</artifactId>
     			<version>1.9</version>
+    		</dependency>
+
+    		<dependency>
+    			<groupId>javax.faces</groupId>
+    			<artifactId>javax.faces-api</artifactId>
+    			<version>2.2</version>
+    		</dependency>
+    		<dependency>
+    			<groupId>javax.el</groupId>
+    			<artifactId>javax.el-api</artifactId>
+    			<version>3.0.0</version>
+    		</dependency>
+    		<dependency>
+    			<groupId>org.glassfish</groupId>
+    			<artifactId>javax.el</artifactId>
+    			<version>3.0.0</version>
     		</dependency>
     	</dependencies>
     </dependencyManagement>
