--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -106,7 +106,7 @@
     <servlet-mapping>
         <servlet-name>Faces Servlet</servlet-name>
         <url-pattern>*.jsf</url-pattern>
-		<url-pattern>*.xhtml</url-pattern> 
+		<!--  <url-pattern>*.xhtml</url-pattern> -->
     </servlet-mapping>
     
     <session-config>
@@ -146,23 +146,6 @@
          <name>fragment1</name>
     </absolute-ordering>
     
-    <!-- Removidos pois já se encontram no fragmento 
-         de configuração logo acima
-         
-	    <mime-mapping>
-	        <extension>eot</extension>
-	        <mime-type>application/vnd.ms-fontobject</mime-type>
-	    </mime-mapping>
-	    
-	    <mime-mapping>
-	        <extension>ttf</extension>
-	        <mime-type>application/octet-stream</mime-type>
-	    </mime-mapping>
-	    <mime-mapping>
-	        <extension>woff</extension>
-	        <mime-type>application/x-font-woff</mime-type>
-	    </mime-mapping>
-    --> 
     <!--Need to define these mime for Font Awesome-->
     <mime-mapping>
         <extension>eot?#iefix</extension>
