--- a/.classpath
+++ b/.classpath
@@ -31,19 +31,15 @@
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.jboss.ide.eclipse.as.core.server.runtime.runtimeTarget/JBoss EAP 7.2 Runtime">
+	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.jboss.ide.eclipse.as.core.server.runtime.runtimeTarget/WildFly10 Local"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
 		<attributes>
-			<attribute name="owner.project.facets" value="jst.web;jst.jsf"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_45">
-		<attributes>
-			<attribute name="owner.project.facets" value="java"/>
+			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="libs/primefaces-5.2.jar"/>
 	<classpathentry kind="lib" path="libs/primefaces-extensions-3.0.0.jar"/>
-	<classpathentry kind="lib" path="libs/bootstrap-1.0.10.jar"/>
 	<classpathentry kind="lib" path="libs/all-themes-1.0.10.jar"/>
+	<classpathentry kind="lib" path="libs/jsf-api-2.2.20.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
