--- a/.classpath
+++ b/.classpath
@@ -32,7 +32,7 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.server.core.container/org.jboss.ide.eclipse.as.core.server.runtime.runtimeTarget/WildFly10 Local"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.8.0_45">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
@@ -40,6 +40,5 @@
 	<classpathentry kind="lib" path="libs/primefaces-5.2.jar"/>
 	<classpathentry kind="lib" path="libs/primefaces-extensions-3.0.0.jar"/>
 	<classpathentry kind="lib" path="libs/all-themes-1.0.10.jar"/>
-	<classpathentry kind="lib" path="libs/jsf-api-2.2.20.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
