--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
 	<groupId>br.com.pix.qwcfp</groupId>
 	<artifactId>QWCFPFileExplorer</artifactId>
-	<version>1.0.1.6</version>
+	<version>1.0.2.0</version>
 	<packaging>war</packaging>
 	<url>${application.url}</url>
 
@@ -65,23 +65,138 @@
 	</repositories>
 
 	<dependencies>
-		<!--  Não consegue baixar a dependência 
+		<!-- Servlet 4.0 Support API -->
+		<dependency>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>javax.servlet-api</artifactId>
+		    <version>4.0.0</version>
+		    <scope>provided</scope>
+		</dependency>
+		
+		<!-- JSP 2.3 Support - API -->
+		<dependency>
+		    <groupId>javax.servlet.jsp</groupId>
+		    <artifactId>javax.servlet.jsp-api</artifactId>
+		    <version>2.3.3</version>
+		    <scope>provided</scope>
+		</dependency>
+		
+		<!-- JSP TagLib (JSTL)  -->
+		<dependency>
+		    <groupId>javax.servlet.jsp.jstl</groupId>
+		    <artifactId>jstl-api</artifactId>
+		    <version>1.2</version>
+		</dependency>
+	
+		<!-- JSF 2.2 Support - API -->
+		<dependency>
+		    <groupId>javax.faces</groupId>
+		    <artifactId>javax.faces-api</artifactId>
+		    <version>2.2</version>
+		    <scope>provided</scope>
+		</dependency>
+		
+		<!-- JSF 2.2 Support - Implementação -->
+		<dependency>
+		    <groupId>org.glassfish</groupId>
+		    <artifactId>javax.faces</artifactId>
+		    <version>2.4.0</version>
+		</dependency>
+
+		<!-- EL API -->
+		<dependency>
+			<groupId>javax.el</groupId>
+			<artifactId>javax.el-api</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+
+		<!-- EL Implementação -->
+		<dependency>
+			<groupId>org.glassfish</groupId>
+			<artifactId>javax.el</artifactId>
+			<version>3.0.0</version>
+		</dependency>
+		
+		<!-- JSF 2.2 Support Validation - API -->
+		<dependency>
+		    <groupId>javax.validation</groupId>
+		    <artifactId>validation-api</artifactId>
+		    <version>2.0.1.Final</version>
+		</dependency>
+		
+		<!-- Suporte ao CDI API -->
+		<dependency>
+		    <groupId>javax.enterprise</groupId>
+		    <artifactId>cdi-api</artifactId>
+		    <version>2.0</version>
+		    <scope>provided</scope>
+		</dependency>
+		
+		<!-- Suporte ao CDI Implementação -->
+		<dependency>
+		    <groupId>org.omnifaces</groupId>
+		    <artifactId>omnifaces</artifactId>
+		    <version>2.3</version>
+		</dependency>
+
+		<!-- Suporte ao CDI + JSF em tempo de execução no Wildflay 10.x -->
+		<!-- Weld api -->
+		<dependency>
+		    <groupId>org.jboss.weld</groupId>
+		    <artifactId>weld-api</artifactId>
+		    <version>3.0.SP4</version>
+		</dependency>
+
+		<!-- Weld Implementação -->
+		<dependency>
+		    <groupId>org.jboss.weld</groupId>
+		    <artifactId>weld-core-impl</artifactId>
+		    <version>3.0.6.Final</version>
+		</dependency>
+		
+		<!-- Weld Implementação Commons -->
+		<dependency>
+		    <groupId>org.jboss.weld.environment</groupId>
+		    <artifactId>weld-environment-common</artifactId>
+		    <version>3.0.6.Final</version>
+		</dependency>
+		
+		<!-- Weld Support ao JSF -->
+		<dependency>
+		    <groupId>org.jboss.weld.module</groupId>
+		    <artifactId>weld-jsf</artifactId>
+		    <version>3.0.6.Final</version>
+		</dependency>
+		
+			<!-- Isso deveria SAIR????	
 			<dependency>
-				<groupId>javax.faces</groupId>
-				<artifactId>jsf-api</artifactId>
-				<version>2.2.20</version>			
+				<groupId>org.jboss.modules</groupId>
+				<artifactId>jboss-modules</artifactId>
+				<version>1.5.1.Final</version>
 			</dependency>
-		-->
+			 -->
+			 
+		<!-- Weld Servlet core -->
 		<dependency>
-			<groupId>com.sun.faces</groupId>
-			<artifactId>jsf-impl</artifactId>
-			<version>2.2.20</version>
+		    <groupId>org.jboss.weld.servlet</groupId>
+		    <artifactId>weld-servlet-core</artifactId>
+		    <version>3.0.6.Final</version>
 		</dependency>
+		
+		<!-- Weld SPI, usado para integração... -->
 		<dependency>
-			<groupId>org.jboss.modules</groupId>
-			<artifactId>jboss-modules</artifactId>
-			<version>1.5.1.Final</version>
+		    <groupId>org.jboss.weld</groupId>
+		    <artifactId>weld-spi</artifactId>
+		    <version>3.0.SP4</version>
 		</dependency>
+
+		<!-- Weld para WEB -->
+		<dependency>
+		    <groupId>org.jboss.weld.module</groupId>
+		    <artifactId>weld-web</artifactId>
+		    <version>3.0.6.Final</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -157,11 +272,7 @@
 			<artifactId>jasypt-springsecurity3</artifactId>
 			<version>1.9.0</version>
 		</dependency>
-		<dependency>
-			<groupId>org.glassfish</groupId>
-			<artifactId>javax.faces</artifactId>
-			<version>${glassfish.javax.faces.version}</version>
-		</dependency>
+		
 		<dependency>
 			<groupId>org.primefaces</groupId>
 			<artifactId>primefaces</artifactId>
@@ -192,22 +303,6 @@
 			<groupId>commons-codec</groupId>
 			<artifactId>commons-codec</artifactId>
 			<version>1.9</version>
-		</dependency>
-
-		<dependency>
-			<groupId>javax.faces</groupId>
-			<artifactId>javax.faces-api</artifactId>
-			<version>2.2</version>
-		</dependency>
-		<dependency>
-			<groupId>javax.el</groupId>
-			<artifactId>javax.el-api</artifactId>
-			<version>3.0.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.glassfish</groupId>
-			<artifactId>javax.el</artifactId>
-			<version>3.0.0</version>
 		</dependency>
 
 		<!-- USADOS EM TEMPO DE BUILD -->
@@ -389,7 +484,7 @@
 			</resource>
 		</resources>
 	</build>
-	<description>Interface WEB de usuários, que permita entre outros, navegar e gerir objetos persistidos no QWCFP. Este módulo depende dum servidor de aplicação J2EE e faz uso de JSF 2.0 + PrimeFAces 5.2 + Web Service SOAP 1.1 + QWCFPWebService, acessando o um dos repositórios QWCFP na rede. Partindo da versão 1.0.0.2 os pacotes passam a referenciar QWCFP.</description>
+	<description>Interface WEB de usuários, que permita entre outros, navegar e gerir objetos persistidos no QWCFP.</description>
 	<dependencyManagement>
 	</dependencyManagement>
 </project>
