--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -50,10 +50,11 @@
         <param-value>true</param-value>
     </context-param>
     <!-- Enables special Facelets debug output during development -->
-    <!-- 	 <context-param>
-                        <param-name>javax.faces.PROJECT_STAGE</param-name>
-                        <param-value>Development</param-value>
-    </context-param> -->
+    <!-- 	 -->
+    <context-param>
+         <param-name>javax.faces.PROJECT_STAGE</param-name>
+         <param-value>Development</param-value>
+    </context-param> 
     <context-param>
         <param-name>facelets.DEVELOPMENT</param-name>
         <param-value>false</param-value>
